@@ -1,3 +1,8 @@
+2008-09-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm.src (parse_byte_stream): Support (or non-support) for
+	unsupported charset="" parameter value (HTML5 revision 2131).
+
 2008-09-20  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm.src: Reminding places where U+000B is allowed as a space
